fixed shifting hero content on mobile screens

--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -4,6 +4,7 @@
   height: 80vh;
   position: relative;
   color: white;
+  
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -14,8 +15,7 @@
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   align-items: center;
-  margin-right: auto;
-  margin-left: auto;
+
   padding: 8rem 4rem;
   max-width: 70rem;
   gap: 2rem;
@@ -41,6 +41,7 @@
 
 .heroHeading p {
   font-size: 20px;
+  max-width: 28rem;
 }
 
 .heroCTAs {
